# Alpha---Airplane-Monitoring-Systems

./: CMakeLists.txt  README.md
embeddedserver/: CMakeLists.txt
embeddedserver/c/: CMakeLists.txt
embeddedserver/c/conf/: .keep
embeddedserver/c/doc/: GPIO_to_base_number_table.txt
embeddedserver/c/include/: AccelDrv.h  BarometerSensor.h  HumiditySensor.h  Joystick.h  JoystickMonitor.h  LightSensor.h  Mmio.h  Oled.h  OledManager.h  PositionTracker.h  ReedSwitch.h  System.h  UDPNetworking.h  Utils.h  WatchdogHitter.h
embeddedserver/c/lib/: AccelDrv.c  BarometerSensor.c  HumiditySensor.c  I2CDrv.c  Joystick.c  JoystickMonitor.c  LightSensor.c  Mmio.c  Oled.c  OledManager.c  PositionTracker.c  ReedSwitch.c  System.c  UDPNetworking.c  Utils.c  WatchdogHitter.c
embeddedserver/c/src/: EmbeddedServer.c
embeddedserver/c/tests/include/: arraysum.h
embeddedserver/c/tests/lib/: arraysum.c
embeddedserver/c/tests/src/: arraysum_test.c
embeddedserver/node/: package.json  server.js
hostserver/: CMakeLists.txt
hostserver/node/: package.json  server.js
hostserver/node/lib/: airplaneserver.js  locations.json
hostserver/node/public/: index.html
hostserver/node/public/scripts/: script.js
hostserver/node/public/styles/: style.css
